src/test/resources/Parser/SyntaxErrors/AbstractClassConstructorCall.front
class A {
    constructors;
    abstract void do();
}

class B {
    void do() {
        A a = new A();
    }
}